Tue Oct 22 13:41 2013 CDT
    * lib/channel.js: Fix a channel dead race condition

Sun Oct 20 20:02 2013 CDT
    * lib/channel.js: Fix MOTD XSS filter stripping style tags

Sat Oct 19 12:20 2013 CDT
    * lib/channel.js: Remove some unnecessary packets

Wed Oct 16 23:29 2013 CDT
    * www/assets/js/callbacks.js, www/channel.html,
      www/assets/css/ytsync.css: Make queuefail errors always show in
      a consistently visible location.

Wed Oct 16 23:21 2013 CDT
    * www/assets/js/util.js: Add an errDialog function that shows an
      error message over the chatbox (instead of alert())

Wed Oct 16 23:09 2013 CDT
    * www/assets/js/util.js: Add a special handler so that clicking
      anywhere on the page clears a userlist dropdown, not just right
      clicking the same name.

Wed Oct 16 21:48 2013 CDT
    * www/assets/js/player.js: Add a stupid timeout hack to address
      a race condition in YouTube's HTML5 player.  Seriously?

Wed Oct 16 17:34 2013 CDT
    * lib/utilities.js: Add a "Set" wrapper around objects to represent
      sets.
    * lib/channel.js, lib/user.js: Change the way muting works- muted
      users are stored in a set and are automatically muted when they
      join (this set is not persisted across restarts, however).

Wed Oct 16 17:19 2013 CDT
    * lib/channel.js, lib/user.js: Only kick users on permissions
      violations.  Fail silently on bad packets.

Mon Oct 14 18:13 2013 CDT
    * lib/channel.js, lib/database.js: Add a separate database query
      for saving ranks on login (insert only, do nothing if the name
      exists).  Should make it actually impossible to ever lose rank
      when logging in (I thought it was impossible before but someone
      claimed it happened).

Mon Oct 14 16:37 2013 CDT
    * lib/bgtask.js: Add an interval for dumping all loaded channels
    * lib/channel.js: Remove per-channel dump interval
    * lib/config.js: Add config key for channel save interval

Mon Oct 14 16:30 2013 CDT